LOGICAL PART AND COMMUNICATION WITH SOCKETS DEFINED AND IMPLEMENTED

--- a/VOTE/CLIENT/Pages/admin_vote.html
+++ b/VOTE/CLIENT/Pages/admin_vote.html
@@ -16,7 +16,7 @@
                     Active Persons :
                 </h3>
                 <p class="actifs">0</p>
-            </div>
+            </div>  
             <div>
                 <h3>Participants :</h3>
                 <p class="actifs">0</p>
@@ -24,7 +24,7 @@
         </div>
             <form id="voteForm">
                 <label for="comment">Votre avis :</label>
-                <textarea id="comment" name="comment" rows="4" cols="50" placeholder="Le Text a voter est ..."></textarea>
+                <input id="comment" name="textToVote" rows="4" cols="50" placeholder="Le Text a voter est ..."></textarea>
                 <br><br>
                 <button type="submit">START THE SESSION</button>
             </form>
