--- a/VOTE/CLIENT/Pages/votant_ouvert.html
+++ b/VOTE/CLIENT/Pages/votant_ouvert.html
@@ -11,15 +11,15 @@
         <H1>VOTE SESSION OPENED</H1>
         <h4><b>YOU MUST CHOOSE AN OPTION FROM THE FOLLOWING BELOW :</b></h4>
         <p>PARAGRAPH</p>
-        <div class="data">
-            <button>FOR</button>
-            <button>AGAINST</button>
-            <button>NPPV</button>
-            <button>NO ANSWERS</button>
-        </div>
+        <form class="data">
+            <button type="submit" value="FOR">FOR</button>
+            <button type="submit" value="AGAINST">AGAINST</button>
+            <button type="submit" value="NPDD">NPPV</button>
+            <button type="submit" value ="NO ANSWERS">NO ANSWERS</button>
+        </form>
     </div>
     <div class="alter">
-        <h2>VOTE SESSION STILL CLOSED</h2>
+        <h2>VOTE SESSION STILL CLOSED</h2>  
     </div>
 </body>
 </html>
